--- a/web-scraper/example/Requests.ipynb
+++ b/web-scraper/example/Requests.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an example to show poeple how to use the Rquests library. <br/>\n",
-    "The "
+    "This is an example to show people how to use the Requests library. <br/>\n",
    ]
   }
  ],
